# TFG

./: README.md
3D/: Adaptador JR3-HERRAMIENTA.f3d  Adaptador JR3-HERRAMIENTA.stl  Adaptador PCB-ROBOT.f3d  Adaptador PCB-ROBOT.stl  Adaptador ROBOT-JR3.f3d  Adaptador ROBOT-JR3.stl
PCB/PCB KiCad (fabricar)/: KiKad TFG_2-PTH.drl  KiKad TFG_2.kicad_pcb  KiKad TFG_2.kicad_prl  KiKad TFG_2.kicad_pro  KiKad TFG_2.kicad_sch  fp-info-cache
PCB/PCB KiCad (ácido)/: KiKad TFG_2-NPTH.drl  KiKad TFG_2.kicad_pcb  KiKad TFG_2.kicad_prl  KiKad TFG_2.kicad_pro  KiKad TFG_2.kicad_sch-bak
PCB/PCB KiCad (ácido)/KiKad TFG_2-backups/: report.txt
app/: JR3PenTool.rslib
app/jr3_driver/: package.xml  setup.cfg  setup.py
app/jr3_driver/jr3_driver/: jr3_driver.py
