<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jr3_driver</name>
  <version>0.0.0</version>
  <description>Driver for JR3 force-torque sensor</description>
  <maintainer email="100472032@alumnos.uc3m.es">Alfredo González Villasante</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
